added header to index body.

--- a/www/index.gohtml
+++ b/www/index.gohtml
@@ -6,6 +6,7 @@
 
     </head>
     <body>
+        <h2>Enter to calculate nth Fibonacci number.</h2>
         <input id="t_fib_in" type="text"/> 
         <input id="b_fib_sub" type="button" value="submit" onclick="RTDEMO.submit();"/>
         <div id="ret_block">
